syntax = "proto3";

package user_service;
option go_package = "genproto/user_service";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string username = 4;
  string email = 5;
  string password = 6;
  string bio = 7;
  string website = 8;
  string created_at = 9;
  string updated_at = 10;
}

message GetUserRequest {
  string id = 1;
}

message GetAllUserRequest {
  int64 page = 1;
  int64 limit = 2;
}

message DeletedUser {}

message GetAllUserResponse {
  repeated User all_users = 1;
}